Moved topos theory out

--- a/custom-definitions.tex
+++ b/custom-definitions.tex
@@ -1,7 +1,14 @@
 %-----------------------------------------------------------------
+% Math stuff
+
+\usepackage{stmaryrd}
+
+
+%-----------------------------------------------------------------
 % Tikz
 
 \usepackage{tikz}
+\usetikzlibrary{hobby}
 
 \tikzstyle{dot} = [circle, fill=black, inner sep=0pt, minimum width=4pt]
 \tikzstyle{arrow} = [shorten <=1mm, shorten >=1mm,thick=2pt]
@@ -24,13 +31,18 @@
 \definecolor{faded}{HTML}{AAAAAA}
 \definecolor{selected}{HTML}{DDBB88}
 \definecolor{wrong}{HTML}{CC3445}
+\definecolor{wire0}{HTML}{898989}
 \definecolor{wire1}{HTML}{ABABAB}
 \definecolor{wire2}{HTML}{AB56BC}
 \definecolor{wire3}{HTML}{348967}
+\definecolor{wire4}{HTML}{AB5656}
+\definecolor{wire5}{HTML}{5656AB}
 
 
 \mathchardef\mhyphen="2D % math hyphen
 \def\EmptySet/{\varnothing}
+\def\InitialObject/{0}
+\def\TerminalObject/{1}
 \def\Nat/{\mathbb{N}}
 \def\bottom/{\perp}
 \def\meet/{\wedge}
@@ -40,11 +52,16 @@
 \def\compose/{\circ}
 \def\childOf/{\preccurlyeq}
 
+\def\subobjectMeet/{\sqcap}
+\def\subobjectJoin/{\sqcup}
+
 \def\openTuple/{\langle}
 \def\closeTuple/{\rangle}
 \newcommand\tuple[1]{\openTuple/ #1 \closeTuple/}
 \newcommand\preimage[1]{#1^{-1}}
 
+\newcommand\topos[1]{\mathcal{#1}}
+\newcommand\subobjectsOf[1]{Sub(#1)}
 \newcommand\ident[1]{id_{#1}}
 \newcommand\category[1]{\mathbb{#1}}
 \newcommand\oppCategory[1]{\mathbb{#1}^{op}}
@@ -63,3 +80,21 @@
 \def\Gsheaves/{$\glues{}$-sheaves}
 
 \newcommand\jop[1]{j_{#1}}
+
+\def\Set/{\category{S}\mathsf{et}}
+\def\Graph/{\category{G}\mathsf{raph}}
+
+\def\monicIn/{\subseteq}
+\newcommand\imageOf[1]{im~#1}
+
+\def\firstProj/{\pi_{1}}
+\def\secondProj/{\pi_{2}}
+\newcommand\productMorphism[2]{\tuple{#1, #2}}
+
+\def\injectLeft/{in\mhyphen l}
+\def\injectRight/{in\mhyphen r}
+\newcommand\coproduct[2]{#1 + #2}
+\newcommand\coproductMorphism[2]{[#1, #2]}
+
+\def\Lang/{\mathcal{L}}
+\newcommand\sem[1]{\llbracket #1 \rrbracket}
