--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for JT Paasch at 2025-11-11 05:59:09 -0500 
+%% Created for JT Paasch at 2026-01-01 21:59:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Bell:1988,
+	address = {Mineola, New York},
+	author = {Bell, John},
+	date-added = {2026-01-01 21:57:55 -0500},
+	date-modified = {2026-01-01 21:59:00 -0500},
+	publisher = {Dover Publications, Inc},
+	title = {Toposes and Local Set Theories},
+	year = {1988}}
+
+@book{LambekAndScott:1986,
+	address = {Cambridge, UK},
+	author = {Lambek, J. and Scott, P. J.},
+	date-added = {2026-01-01 21:49:24 -0500},
+	date-modified = {2026-01-01 21:50:36 -0500},
+	publisher = {Cambridge University Press},
+	title = {An Introduction to Higher Order Categorical Logic},
+	year = {1986}}
 
 @article{LeonardAndGoodman:1940,
 	author = {Leonard, Henry and Goodman, Nelson},
@@ -228,7 +246,8 @@
 	title = {Mereology},
 	url = {https://plato.stanford.edu/archives/spr2011/entries/mereology/},
 	urldate = {2011},
-	year = {2011}}
+	year = {2011},
+	bdsk-url-1 = {https://plato.stanford.edu/archives/spr2011/entries/mereology/}}
 
 @book{Simons:1987,
 	address = {Oxford, UK},
