Refactored, removed topos sections

--- a/submission-full.tex
+++ b/submission-full.tex
@@ -104,16 +104,11 @@ $^{2}$ \quad Affiliation 2; e-mail@e-mail.com}
 % Contact information of the corresponding author
 \corres{Correspondence: e-mail@e-mail.com; Tel.: (optional; include country code; if there are multiple corresponding authors, add author initials) +xx-xxxx-xxx-xxxx (F.L.)}
 
-% Current address and/or shared authorship
-%\firstnote{Current address: Affiliation.}  
-% Current address should not be the same as any items in the Affiliation section.
+% Abstract (Do not insert blank lines, i.e. \\) 
+\abstract{A single paragraph of about 200 words maximum. For research articles, abstracts should give a pertinent overview of the work. We strongly encourage authors to use the following style of structured abstracts, but without headings: (1) Background: place the question addressed in a broad context and highlight the purpose of the study; (2) Methods: describe briefly the main methods or treatments applied; (3) Results: summarize the article's main findings; (4) Conclusions: indicate the main conclusions or interpretations. The abstract should be an objective representation of the article, it must not contain results which are not presented and substantiated in the main text and should not exaggerate the main conclusions.}
 
-%\secondnote{These authors contributed equally to this work.}
-% The commands \thirdnote{} till \eighthnote{} are available for further notes.
-
-%\simplesumm{} % Simple summary
-
-%\conference{} % An extended version of a conference paper
+% Keywords
+\keyword{mereology; fusions and integral wholes; sheaves; point-free topology; frames and locales; toposes; modality; merology logic; categorical logic} 
 
 % The fields PACS, MSC, and JEL may be left empty or commented out if not applicable
 %\PACS{J0101}
@@ -151,14 +146,11 @@ $^{2}$ \quad Affiliation 2; e-mail@e-mail.com}
 %\endnote{This is an endnote.} % To use endnotes, please un-comment \printendnotes below (before References). Only journal Laws uses \footnote.
 
 
-\input{section-0}
 \input{section-1}
 \input{section-2}
 \input{section-3}
 \input{section-4}
 \input{section-5}
-\input{section-6}
-\input{section-7}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
